contrast error fix

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -345,7 +345,7 @@ main a {
 form label {
   display: block;
   padding-top: 20px;
-  color: #6e9c2f;
+  color: #2a571d;
   font-size: 1.5rem;
 }
 
